--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               </h4> <h6>
                 The protocol establishes a remote connection using a Bridge
                 server.
-              </h6> <a href="navigat/app.html"><button class="animated pulse butt-1">
+              </h6> <a href="app/index.html"><button class="animated pulse butt-1">
                   Connect Wallet
                 </button></a> <a href="navigat/app.html"><button class="animated pulse butt-2">Collab.Join</button></a> <br> <br> <div><div class="w-embed w-script"><div id="coinmarketcap-widget-marquee" coins="1,1027,825,1839,3408,52,2010" currency="USD" theme="light" transparent="false" show-symbol-logo="true"></div></div></div></div></div></div></div></div></div>  <script
       src="../widgets.coingecko.com/coingecko-coin-price-marquee-widget.js"
